fixing paginator select and Collapse

--- a/uibase/src/styles/App.css
+++ b/uibase/src/styles/App.css
@@ -380,7 +380,11 @@ height: 8px!important;
 }
 /* Paginator ! */
 
-
+.paginator .ant-select-dropdown-placement-bottomLeft,
+.paginator .ant-select-dropdown-placement-topLeft {
+  top: unset!important;
+  transform: translate(0,-163px) !important;
+}
 
 /*DropDown*/
 
@@ -398,6 +402,12 @@ ul.ant-dropdown-menu.ant-dropdown-menu-light.ant-dropdown-menu-root.ant-dropdown
 /*Logo*/
 .app-logo span, .app-logo-settings span {
   margin: unset!important;
+}
+
+/*Collapse*/
+
+.ant-collapse-content.ant-collapse-content-active{
+  padding: 16px;
 }
 
  /*Authorization*/
@@ -1818,14 +1828,5 @@ padding: 3px 24px;
   background-color: #FFF8E0 !important
 }
 
-.paginator .ant-select-dropdown-placement-bottomLeft {
-  top: unset!important;
-  transform: translate(0,-163px) !important;
-}
 
 
-.paginator .ant-select-dropdown-placement-bottomLeft,
-.paginator .ant-select-dropdown-placement-topLeft {
-  top: unset!important;
-  transform: translate(0,-163px) !important;
-}
